# kora-platform

backend/: .env.example  .gitignore  README.md  alembic.ini  no_analysis.txt  no_data.txt  order1.txt  order2.txt  order3.txt  pyproject.toml  sample.docx  unit_test.txt  unprocessed.txt
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_create_users_table.py  b2c3d4e5f6a7_create_organization_tables.py  c3d4e5f6a7b8_rename_check_constraints.py  d4e5f6a7b8c9_create_documents_table.py  e5f6a7b8c9d0_extend_documents_for_processing.py  f6a7b8c9d0e1_create_document_analyses_table.py  g7b8c9d0e1f2_create_financial_metrics_table.py  h8c9d0e1f2g3_create_investment_scores_table.py
backend/app/: config.py  main.py
backend/app/api/v1/: auth.py  dashboard.py  documents.py  organizations.py  portfolio.py
backend/app/core/: logging.py  middleware.py  security.py  storage.py
backend/app/db/: base.py  dependencies.py  session.py
backend/app/models/: __init__.py  document.py  document_analysis.py  financial_metrics.py  investment_score.py  organization.py  user.py
backend/app/schemas/: auth.py  dashboard.py  document.py  document_analysis.py  financial_metrics.py  investment_score.py  organization.py  portfolio.py  user.py
backend/app/services/: ai_service.py  auth_service.py  dashboard_service.py  document_analysis_service.py  document_processor.py  document_service.py  financial_analysis_service.py  investment_scoring_service.py  organization_service.py  portfolio_service.py
docs/architecture/: database.md  information-architecture.md
(+2 files in other folders)
